--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -5,6 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push events but only for the "main" branch
+  workflow_dispatch:
   push:
     branches: [ "main" ]
 
