--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push events but only for the "main" branch
-  workflow_dispatch:
+  workflow_dispatch: # allows manual trigger
   push:
     branches: [ "main" ]
 
@@ -19,4 +19,4 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Run a one-line script
-        run: echo password
+        run: echo ${{ secrets.SUPER_SECRET_PASSWORD }}
