--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -16,7 +16,17 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    outputs:
+      pw: ${{ steps.Run_a_one-line_script.outputs.pw }}
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Run a one-line script
-        run: echo ${{ secrets.SUPER_SECRET_PASSWORD }}
+        run: echo ${{ secrets.SUPER_SECRET_PASSWORD }} >> "$GITHUB_OUTPUT"
+
+  matrix:
+    runs-on: ubuntu-latest
+    steps:
+      - env:
+          pw: ${{ steps.Run_a_one-line_script.outputs.pw }}
+        run: echo $pw >> "$GITHUB_OUTPUT"
