--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -16,18 +16,27 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: Run a one-line script
+        run: echo ${{ secrets.SUPER_SECRET_PASSWORD }}
+
+  variable:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
     outputs:
       pw: ${{ steps.step1.outputs.pw }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Run a one-line script
-        id: step1
-        run: echo ${{ secrets.SUPER_SECRET_PASSWORD }} >> "$GITHUB_OUTPUT"
+      - id: step1
+        run: echo "This is a test string." >> "$GITHUB_OUTPUT"
+  
 
-  matrix:
+  print:
     runs-on: ubuntu-latest
-    needs: simple
+    needs: variable
     steps:
       - env:
           pw: ${{ needs.simple.outputs.pw }}
