--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -39,5 +39,5 @@ jobs:
     needs: variable
     steps:
       - env:
-          var: ${{ needs.simple.outputs.test }}
+          var: ${{ needs.variable.outputs.test }}
         run: echo "$var"
