--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -41,3 +41,12 @@ jobs:
       - env:
           var: ${{ needs.variable.outputs.test }}
         run: echo "$var"
+
+
+  matrix:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        count: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+    steps:
+      - run: echo "$var, ${{ matrix.count }}"
