--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -49,4 +49,6 @@ jobs:
       matrix:
         count: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
     steps:
-      - run: echo "$var , ${{ matrix.count }}"
+      - env:
+          var: ${{ needs.variable.outputs.test }}
+        run: echo "$var - ${{ matrix.count }}"
