--- a/.github/workflows/getting-started.yml
+++ b/.github/workflows/getting-started.yml
@@ -45,6 +45,7 @@ jobs:
 
   matrix:
     runs-on: ubuntu-latest
+    needs: variable
     strategy:
       matrix:
         count: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
